--- a/public/main.html
+++ b/public/main.html
@@ -271,7 +271,7 @@
                   <div id="alchemy-course-add__course-type--normal" class="mdc-radio">
                     <input class="mdc-radio__native-control" type="radio"
                            id="alchemy-course-add__course-type--radio-normal"
-                           name="alchemy-course-add__course-type--radio" checked>
+                           name="alchemy-course-add__course-type--radio" value="0" checked>
                     <div class="mdc-radio__background">
                       <div class="mdc-radio__outer-circle"></div>
                       <div class="mdc-radio__inner-circle"></div>
@@ -284,7 +284,7 @@
                   <div id="alchemy-course-add__course-type--elective" class="mdc-radio">
                     <input class="mdc-radio__native-control" type="radio"
                            id="alchemy-course-add__course-type--radio-elective"
-                           name="alchemy-course-add__course-type--radio">
+                           name="alchemy-course-add__course-type--radio" value="1">
                     <div class="mdc-radio__background">
                       <div class="mdc-radio__outer-circle"></div>
                       <div class="mdc-radio__inner-circle"></div>
@@ -301,7 +301,7 @@
                   <div id="alchemy-course-add__course-person--one" class="mdc-radio">
                     <input class="mdc-radio__native-control" type="radio"
                            id="alchemy-course-add__course-person--radio-one"
-                           name="alchemy-course-add__course-person--radio" checked>
+                           name="alchemy-course-add__course-person--radio" value="1" checked>
                     <div class="mdc-radio__background">
                       <div class="mdc-radio__outer-circle"></div>
                       <div class="mdc-radio__inner-circle"></div>
@@ -314,7 +314,7 @@
                   <div id="alchemy-course-add__course-person--two" class="mdc-radio">
                     <input class="mdc-radio__native-control" type="radio"
                            id="alchemy-course-add__course-person--radio-two"
-                           name="alchemy-course-add__course-person--radio">
+                           name="alchemy-course-add__course-person--radio" value="2">
                     <div class="mdc-radio__background">
                       <div class="mdc-radio__outer-circle"></div>
                       <div class="mdc-radio__inner-circle"></div>
@@ -486,6 +486,40 @@
     </div>
   </div>
 </section>
+
+<!-- Alchemy Toast -->
+<div id="alchemy-toast" class="mdc-snackbar mdc-snackbar--align-start"
+     aria-live="assertive"
+     aria-atomic="true"
+     aria-hidden="true">
+  <div class="mdc-snackbar__text"></div>
+  <div class="mdc-snackbar__action-wrapper">
+    <button type="button" class="mdc-snackbar__action-button"></button>
+  </div>
+</div>
+
+<!-- Alchemy Dialog -->
+<aside id="alchemy-dialog"
+       class="mdc-dialog"
+       role="alertdialog"
+       aria-labelledby="my-mdc-dialog-label"
+       aria-describedby="my-mdc-dialog-description">
+  <div class="mdc-dialog__surface">
+    <header class="mdc-dialog__header">
+      <h2 class="mdc-dialog__header__title">
+        Use Google's location service?
+      </h2>
+    </header>
+    <section class="mdc-dialog__body">
+      Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.
+    </section>
+    <footer class="mdc-dialog__footer">
+      <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel">Decline</button>
+      <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--accept">Accept</button>
+    </footer>
+  </div>
+  <div class="mdc-dialog__backdrop"></div>
+</aside>
 
 <!-- Material Web Components -->
 <script src="js/vendor/material-components-web.js"></script>
