--- a/public/main.html
+++ b/public/main.html
@@ -493,6 +493,7 @@
      aria-atomic="true"
      aria-hidden="true">
   <div class="mdc-snackbar__text"></div>
+  <div class="mdc-typography--caption alchemy-toast__extra"></div>
   <div class="mdc-snackbar__action-wrapper">
     <button type="button" class="mdc-snackbar__action-button"></button>
   </div>
