--- a/public/main.html
+++ b/public/main.html
@@ -199,7 +199,7 @@
                 <div id="alchemy-course-add__course-code"
                      class="mdc-text-field mdc-text-field--outlined mdc-text-field--focused">
                   <input type="text" id="alchemy-course-add__course-code--input" class="mdc-text-field__input"
-                         aria-controls="name-validation-message" required minlength=2>
+                         aria-controls="name-validation-message" autocomplete="off" required minlength=2>
                   <label for="alchemy-course-add__course-code--input" class="mdc-floating-label">Course Code</label>
                   <div class="mdc-notched-outline">
                     <svg>
@@ -218,7 +218,7 @@
                 <div id="alchemy-course-add__course-name"
                      class="mdc-text-field mdc-text-field--outlined mdc-layout-grid__cell--span-8 mdc-text-field--focused">
                   <input type="text" id="alchemy-course-add__course-name--input" class="mdc-text-field__input"
-                         aria-controls="name-validation-message" required minlength=4>
+                         aria-controls="name-validation-message" autocomplete="off" required minlength=4>
                   <label for="alchemy-course-add__course-alias--input" class="mdc-floating-label">Course Name</label>
                   <div class="mdc-notched-outline">
                     <svg>
@@ -237,7 +237,7 @@
                 <div id="alchemy-course-add__course-alias"
                      class="mdc-text-field mdc-text-field--outlined mdc-text-field--focused">
                   <input type="text" id="alchemy-course-add__course-alias--input" class="mdc-text-field__input"
-                         aria-controls="name-validation-message" required minlength=3>
+                         aria-controls="name-validation-message" autocomplete="off" required minlength=3>
                   <label for="alchemy-course-add__course-alias--input" class="mdc-floating-label">Course Alias</label>
                   <div class="mdc-notched-outline">
                     <svg>
@@ -329,7 +329,7 @@
                 <div id="alchemy-course-add__course-lecture"
                      class="mdc-text-field mdc-text-field--outlined mdc-layout-grid__cell--span-3 mdc-text-field--focused">
                   <input type="number" id="alchemy-course-add__course-lecture--input" class="mdc-text-field__input"
-                         aria-controls="name-validation-message" required  min="0" step="1" max="12">
+                         aria-controls="name-validation-message" autocomplete="off" required  min="0" step="1" max="12">
                   <label for="alchemy-course-add__course-lecture--input" class="mdc-floating-label">No. of
                     Lectures</label>
                   <div class="mdc-notched-outline">
@@ -349,7 +349,7 @@
                 <div id="alchemy-course-add__course-practical"
                      class="mdc-text-field mdc-text-field--outlined mdc-text-field--focused">
                   <input type="number" id="alchemy-course-add__course-practical--input" class="mdc-text-field__input"
-                         aria-controls="name-validation-message" required min="0" step="1" max="12">
+                         aria-controls="name-validation-message" autocomplete="off" required min="0" step="1" max="12">
                   <label for="alchemy-course-add__course-practical--input" class="mdc-floating-label">No. of
                     Practicals</label>
                   <div class="mdc-notched-outline">
@@ -369,7 +369,7 @@
                 <div id="alchemy-course-add__course-tutorial"
                      class="mdc-text-field mdc-text-field--outlined mdc-text-field--focused">
                   <input type="number" id="alchemy-course-add__course-tutorial--input" class="mdc-text-field__input"
-                         aria-controls="name-validation-message" value="0" required min="0" step="1" max="12">
+                         aria-controls="name-validation-message" autocomplete="off" value="0" required min="0" step="1" max="12">
                   <label for="alchemy-course-add__course-tutorial--input"
                          class="mdc-floating-label mdc-floating-label--float-above">No. of
                     Tutorials</label>
@@ -390,7 +390,7 @@
                 <div id="alchemy-course-add__course-credit"
                      class="mdc-text-field mdc-text-field--outlined mdc-text-field--focused">
                   <input type="number" id="alchemy-course-add__course-credit--input" class="mdc-text-field__input"
-                         aria-controls="name-validation-message" value="0" required min="0" step="1" max="24">
+                         aria-controls="name-validation-message" autocomplete="off" value="0" required min="0" step="1" max="24">
                   <label for="alchemy-course-add__course-tutorial--input"
                          class="mdc-floating-label mdc-floating-label--float-above">Credit</label>
                   <div class="mdc-notched-outline">
@@ -715,7 +715,7 @@
   <div class="mdc-snackbar__text"></div>
   <div class="mdc-typography--caption alchemy-toast__extra"></div>
   <div class="mdc-snackbar__action-wrapper">
-    <button type="button" class="mdc-snackbar__action-button"></button>
+    <button type="button" class="mdc-button mdc-theme--secondary mdc-snackbar__action-button"></button>
   </div>
 </div>
 
