Add logout button

--- a/public/main.html
+++ b/public/main.html
@@ -735,10 +735,13 @@
   </main>
   <div class="mdc-layout-grid mdc-theme--primary-dark-bg mdc-theme--text-disabled-on-dark">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1"></div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <span class="app-title">Alchemy</span>
       </div>
-      <div class="mdc-layout-grid__cell"></div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid--align-right">
+        <button id="alchemy-login__logout-button" class="mdc-button mdc-button--raised mdc-theme--text-primary-on-primary">Logout</button>
+      </div>
     </div>
   </div>
 </section>
