--- a/public/main.html
+++ b/public/main.html
@@ -733,7 +733,7 @@
     </section>
 
     <!-- SECTION Course Offered-->
-    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel active" id="panel-4" role="tabpanel">
+    <section class="mdc-layout-grid mdc-layout-grid--full-width panel active" id="panel-4" role="tabpanel">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-card mdc-layout-grid__cell--span-12">
           <h1 class="mdc-typography--headline">Course Offered</h1>
@@ -750,11 +750,37 @@
                 </ul>
               </div>
             </div>
-            <button id="alchemy-course-offered__view-button" class="mdc-button mdc-button--raised mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--align-middle">View Courses</button>
           </div>
-          <div class="mdc-layout-grid__inner">
+        </div>
+      </div>
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-card mdc-layout-grid__cell--span-4">
+        <ul class="mdc-list mdc-list--two-line demo-list">
+          <li class="mdc-list-item">
+                <span class="mdc-list-item__text">
+                  Two-line item
+                  <span class="mdc-list-item__secondary-text">Secondary text</span>
+                </span>
+            <span class="mdc-list-item__meta">$10.00</span>
+          </li>
+          <li class="mdc-list-item">
+                <span class="mdc-list-item__text">
+                  Two-line item
+                  <span class="mdc-list-item__secondary-text">Secondary text</span>
+                </span>
+            <span class="mdc-list-item__meta">$20.00</span>
+          </li>
+          <li class="mdc-list-item">
+                <span class="mdc-list-item__text">
+                  Two-line item
+                  <span class="mdc-list-item__secondary-text">Secondary text</span>
+                </span>
+            <span class="mdc-list-item__meta">$30.00</span>
+          </li>
+        </ul>
+      </div>
+        <div class="mdc-card mdc-layout-grid__cell--span-8">
 
-          </div>
         </div>
       </div>
     </section>
@@ -767,7 +793,9 @@
         <span class="app-title">Alchemy</span>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid--align-right">
-        <button id="alchemy-login__logout-button" class="mdc-button mdc-button--raised mdc-theme--text-primary-on-primary">Logout</button>
+        <button id="alchemy-login__logout-button"
+                class="mdc-button mdc-button--raised mdc-theme--text-primary-on-primary">Logout
+        </button>
       </div>
     </div>
   </div>
