--- a/public/main.html
+++ b/public/main.html
@@ -96,13 +96,13 @@
     <div class="mdc-toolbar__section--align-start my-modified-toolbar-section">
       <nav id="dynamic-tab-bar" class="mdc-tab-bar custom-indicator-tab-bar-in-toolbar" role="tablist">
         <a role="tab" aria-controls="courses"
-           class="mdc-tab">Course</a>
+           class="mdc-tab mdc-tab--active">Course</a>
         <a role="tab" aria-controls="panel-2"
            class="mdc-tab">Faculty</a>
         <a role="tab" aria-controls="panel-2"
            class="mdc-tab">Location</a>
         <a role="tab" aria-controls="panel-4"
-           class="mdc-tab mdc-tab--active">Course Offered</a>
+           class="mdc-tab">Course Offered</a>
         <a role="tab" aria-controls="panel-3"
            class="mdc-tab">Time Table</a>
         <a role="tab" aria-controls="panel-3"
@@ -119,7 +119,7 @@
 <section id="alchemy-body" style="display: none;">
   <main class="mdc-toolbar-fixed-adjust panels">
     <!-- SECTION Course-->
-    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel" id="alchemy-courses"
+    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel active" id="alchemy-courses"
              role="tabpanel"
              aria-hidden="false">
       <!--
@@ -459,52 +459,228 @@
       </div>
     </section>
     <!-- SECTION Faculty-->
-    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel" id="panel-2" role="tabpanel"
+    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel" id="alchemy-faculty"
+             role="tabpanel"
              aria-hidden="true">
-      <div class="mdc-layout-grid__inner">
-        <div class="mdc-card mdc-theme--background mdc-layout-grid__cell--span-12">
-          <div class="mdc-card__actions mdc-card__actions--full-bleed">
-            <div class="mdc-card__action-buttons">
-              <button class="mdc-button mdc-button--compact mdc-card__action mdc-card__action--button">Action 1</button>
-              <button class="mdc-button mdc-button--compact mdc-card__action mdc-card__action--button">Action 2</button>
+      <!--
+    /*
+      |--------------------------------------------------------------------------
+      | Faculty View
+      |--------------------------------------------------------------------------
+      */
+    -->
+      <div id="alchemy-faculty-view" class="mdc-layout-grid__inner">
+        <div class="mdc-card mdc-layout-grid__cell--span-12">
+          <section class="mdc-card__primary">
+            <h1 class="mdc-typography--headline">View Faculty</h1>
+            <div class="mdc-layout-grid__inner">
+
+              <div id="alchemy-faculty-view__filter-by-text"
+                   class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon mdc-layout-grid__cell--span-6">
+                <i class="material-icons mdc-text-field__icon" tabindex="0">search</i>
+                <input type="text" class="mdc-text-field__input">
+                <label class="mdc-floating-label" for="my-text-field">Search</label>
+                <div class="mdc-line-ripple"></div>
+              </div>
+
+              <div id="alchemy-faculty-view__filter-by-branch" class="mdc-select  mdc-layout-grid__cell--span-3"
+                   role="listbox">
+                <div class="mdc-select__surface" tabindex="0">
+                  <div class="mdc-select__label"></div>
+                  <div class="mdc-select__selected-text"></div>
+                  <div class="mdc-select__bottom-line"></div>
+                </div>
+                <div class="mdc-menu mdc-select__menu">
+                  <ul class="mdc-list mdc-menu__items">
+                  </ul>
+                </div>
+              </div>
+              <div id="alchemy-faculty-view__filter-by-designation" class="mdc-select  mdc-layout-grid__cell--span-3"
+                   role="listbox">
+                <div class="mdc-select__surface" tabindex="0">
+                  <div class="mdc-select__label"></div>
+                  <div class="mdc-select__selected-text"></div>
+                  <div class="mdc-select__bottom-line"></div>
+                </div>
+                <div class="mdc-menu mdc-select__menu">
+                  <ul class="mdc-list mdc-menu__items">
+                  </ul>
+                </div>
+              </div>
             </div>
-            <div class="mdc-card__action-icons">
-              <i class="material-icons mdc-card__action mdc-card__action--icon" tabindex="0" role="button"
-                 title="Share">share</i>
-              <i class="material-icons mdc-card__action mdc-card__action--icon" tabindex="0" role="button"
-                 title="More options">more_vert</i>
+            <div class="mdc-layout-grid__inner">
+              <div class="mdc-layout-grid__cell--span-3"></div>
+              <div class="mdc-layout-grid__cell--span-9 mdc-layout-grid--align-right">
+                <button id="alchemy-faculty-view__add-button"
+                        class="mdc-button">
+                  <i class="material-icons mdc-button__icon">add</i>
+                  Add Faculty
+                </button>
+                <button id="alchemy-faculty-view__edit-button"
+                        class="mdc-button" disabled>
+                  <i class="material-icons mdc-button__icon">edit</i>
+                  Edit Faculty
+                </button>
+                <button id="alchemy-faculty-view__delete-button"
+                        class="mdc-button" disabled>
+                  <i class="material-icons mdc-button__icon">clear</i>
+                  Delete Faculty
+                </button>
+              </div>
             </div>
-          </div>
+            <br/>
+            <div class="mdc-layout-grid__inner">
+              <div class="mdc-layout-grid__cell--span-12">
+                <div id="alchemy-faculty-view__table" class="mdc-data-table">
+                  <table class="mdc-data-table__content">
+                    <thead>
+
+                    </thead>
+                    <tbody>
+
+                    </tbody>
+                  </table>
+                  <div class="empty-table">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
         </div>
-
-
       </div>
-      <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell--span-12">
-          <div class="mdc-card mdc-theme--background">
-            <section class="mdc-card__primary">
-              <h1 class="mdc-card__title mdc-card__title--large">Add new course</h1>
-            </section>
 
-            <section class="mdc-card__supporting-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore
-              magna aliqua.
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat.
-            </section>
+      <!--
+      /*
+        |--------------------------------------------------------------------------
+        | Faculty Add
+        |--------------------------------------------------------------------------
+        */
+      -->
+      <div id="alchemy-faculty-add" class="mdc-layout-grid__inner">
+        <div class="mdc-card mdc-layout-grid__cell--span-12">
+          <section class="mdc-card__primary">
+            <h1 class="mdc-typography--headline">Add Faculty</h1>
+            <form id="alchemy-faculty-add__form" class="mdc-layout-grid__inner" onsubmit=" ">
+              <!-- Faculty Name -->
+              <div class="mdc-layout-grid__cell--span-4">
+                <div id="alchemy-faculty-add__faculty-name"
+                     class="mdc-text-field mdc-text-field--outlined mdc-text-field--focused">
+                  <input type="text" id="alchemy-faculty-add__faculty-name--input" required
+                         class="mdc-text-field__input"
+                         aria-controls="name-validation-message" maxlength=128 autocomplete="off">
+                  <label for="alchemy-faculty-add__faculty-name--input" class="mdc-floating-label">Faculty
+                    Name</label>
+                  <div class="mdc-notched-outline">
+                    <svg>
+                      <path class="mdc-notched-outline__path"/>
+                    </svg>
+                  </div>
+                  <div class="mdc-notched-outline__idle"></div>
+                </div>
+                <p id="alchemy-faculty-add__faculty-name--validation-msg"
+                   class="mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg"
+                   aria-hidden="false">
+                  Required.
+                </p>
+              </div>
+              <!-- Faculty Alias -->
+              <div class="mdc-layout-grid__cell--span-4">
+                <div id="alchemy-faculty-add__faculty-alias"
+                     class="mdc-text-field mdc-text-field--outlined mdc-layout-grid__cell--span-8 mdc-text-field--focused">
+                  <input type="text" id="alchemy-faculty-add__faculty-alias--input"
+                         class="mdc-text-field__input"
+                         aria-controls="name-validation-message" required minlength=2 maxlength="8"
+                         autocomplete="off">
+                  <label for="alchemy-faculty-add__faculty-alias--input" class="mdc-floating-label">Faculty
+                    Alias</label>
+                  <div class="mdc-notched-outline">
+                    <svg>
+                      <path class="mdc-notched-outline__path"/>
+                    </svg>
+                  </div>
+                  <div class="mdc-notched-outline__idle"></div>
+                </div>
+                <p id="alchemy-faculty-add__faculty-alias--validation-msg"
+                   class="mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg"
+                   aria-hidden="false">
+                  Required.
+                </p>
+              </div>
+              <!-- Faculty Code -->
+              <div class="mdc-layout-grid__cell--span-4">
+                <div id="alchemy-faculty-add__faculty-code"
+                     class="mdc-text-field mdc-text-field--outlined mdc-layout-grid__cell--span-8 mdc-text-field--focused">
+                  <input type="text" id="alchemy-faculty-add__faculty-code--input"
+                         class="mdc-text-field__input"
+                         aria-controls="name-validation-message" required minlength=2 maxlength="8"
+                         autocomplete="off">
+                  <label for="alchemy-faculty-add__faculty-code--input" class="mdc-floating-label">Faculty
+                    Code</label>
+                  <div class="mdc-notched-outline">
+                    <svg>
+                      <path class="mdc-notched-outline__path"/>
+                    </svg>
+                  </div>
+                  <div class="mdc-notched-outline__idle"></div>
+                </div>
+                <p id="alchemy-faculty-add__faculty-code--validation-msg"
+                   class="mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg"
+                   aria-hidden="false">
+                  Required.
+                </p>
+              </div>
+              <!-- Faculty Department -->
+              <div id="alchemy-faculty-add__faculty-department" class="mdc-select mdc-layout-grid__cell--span-4"
+                   role="listbox">
+                <div class="mdc-select__surface" tabindex="0">
+                  <div class="mdc-select__label"></div>
+                  <div class="mdc-select__selected-text"></div>
+                  <div class="mdc-select__bottom-line"></div>
+                </div>
+                <div class="mdc-menu mdc-select__menu">
+                  <ul class="mdc-list mdc-menu__items">
+                  </ul>
+                </div>
+              </div>
+              <!-- Faculty Designation -->
+              <div id="alchemy-faculty-add__faculty-designation" class="mdc-select mdc-layout-grid__cell--span-4"
+                   role="listbox">
+                <div class="mdc-select__surface" tabindex="0">
+                  <div class="mdc-select__label"></div>
+                  <div class="mdc-select__selected-text"></div>
+                  <div class="mdc-select__bottom-line"></div>
+                </div>
+                <div class="mdc-menu mdc-select__menu">
+                  <ul class="mdc-list mdc-menu__items">
+                  </ul>
+                </div>
+              </div>
 
-            <section class="mdc-card__actions">
-
-              <button class="mdc-button mdc-button--compact mdc-card__action">Action 1</button>
-              <button class="mdc-button mdc-button--compact mdc-card__action">Action 2</button>
-            </section>
-          </div>
+              <div class="mdc-layout-grid__cell--span-6">
+                <button id="alchemy-faculty-add__add-button" class="mdc-button mdc-button--raised"
+                        type="button">
+                  <i class="material-icons mdc-button__icon">done</i>
+                  ADD FACULTY
+                </button>
+                <button id="alchemy-faculty-add__reset-button" class="mdc-button" type="reset">
+                  <i class="material-icons mdc-button__icon">undo</i>
+                  RESET FIELDS
+                </button>
+              </div>
+              <div class="mdc-layout-grid__cell--span-6 mdc-layout-grid--align-right">
+                <button id="alchemy-faculty-add__view-button" class="mdc-button" type="">
+                  <i class="material-icons mdc-button__icon">remove_red_eye</i>
+                  VIEW FACULTY
+                </button>
+              </div>
+            </form>
+          </section>
         </div>
       </div>
     </section>
+
     <!-- SECTION Location-->
-    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel active" id="panel-3" role="tabpanel"
+    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel" id="alchemy-location" role="tabpanel"
              aria-hidden="true">
       <!--
     /*
@@ -733,7 +909,7 @@
     </section>
 
     <!-- SECTION Course Offered-->
-    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel" id="panel-4" role="tabpanel">
+    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel" id="alchemy-course-offered" role="tabpanel">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-card mdc-layout-grid__cell--span-12">
           <h1 class="mdc-typography--headline">Course Offered</h1>
