--- a/public/main.html
+++ b/public/main.html
@@ -806,7 +806,7 @@
                 <div id="alchemy-location-add__location-alias"
                      class="mdc-text-field mdc-text-field--outlined mdc-layout-grid__cell--span-8 mdc-text-field--focused">
                   <input type="text" id="alchemy-location-add__location-alias--input" class="mdc-text-field__input"
-                         aria-controls="name-validation-message" required minlength=2 maxlength="8"  autocomplete="off">
+                         aria-controls="name-validation-message" required minlength=2 maxlength="8" autocomplete="off">
                   <label for="alchemy-location-add__location-alias--input" class="mdc-floating-label">Location
                     Alias</label>
                   <div class="mdc-notched-outline">
@@ -855,7 +855,8 @@
                 </div>
               </div>
               <!-- Location Type -->
-              <div id="alchemy-location-add__location-type" class="mdc-layout-grid__cell--span-5 mdc-layout-grid__cell--align-middle">
+              <div id="alchemy-location-add__location-type"
+                   class="mdc-layout-grid__cell--span-5 mdc-layout-grid__cell--align-middle">
                 <span class="mdc-typography--subheading">&nbsp;Location Type:</span>
                 <div class="mdc-form-field">
                   <div id="alchemy-location-add__location-type--classroom" class="mdc-radio">
@@ -909,7 +910,8 @@
     </section>
 
     <!-- SECTION Course Offered-->
-    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel" id="alchemy-course-offered" role="tabpanel">
+    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel" id="alchemy-course-offered"
+             role="tabpanel">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-card mdc-layout-grid__cell--span-12">
           <h1 class="mdc-typography--headline">Course Offered</h1>
@@ -926,7 +928,10 @@
                 </ul>
               </div>
             </div>
-            <button id="alchemy-course-offered__view-button" class="mdc-button mdc-button--raised mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--align-middle">View Courses</button>
+            <button id="alchemy-course-offered__view-button"
+                    class="mdc-button mdc-button--raised mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--align-middle">
+              View Courses
+            </button>
           </div>
           <div class="mdc-layout-grid__inner">
 
@@ -943,7 +948,9 @@
         <span class="app-title">Alchemy</span>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid--align-right">
-        <button id="alchemy-login__logout-button" class="mdc-button mdc-button--raised mdc-theme--text-primary-on-primary">Logout</button>
+        <button id="alchemy-login__logout-button"
+                class="mdc-button mdc-button--raised mdc-theme--text-primary-on-primary">Logout
+        </button>
       </div>
     </div>
   </div>
