Fix section brackets

--- a/public/main.html
+++ b/public/main.html
@@ -912,62 +912,62 @@
     <!-- SECTION Course Offered-->
     <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel" id="alchemy-course-offered"
              role="tabpanel">
-    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel active" id="panel-4" role="tabpanel">
-      <div class="mdc-layout-grid__inner">
-        <div class="mdc-card mdc-layout-grid__cell--span-12">
-          <h1 class="mdc-typography--headline">Course Offered</h1>
-          <div class="mdc-layout-grid__inner">
-            <div id="alchemy-course-offered__class" class="mdc-select mdc-layout-grid__cell--span-4"
-                 role="listbox">
-              <div class="mdc-select__surface" tabindex="0">
-                <div class="mdc-select__label"></div>
-                <div class="mdc-select__selected-text"></div>
-                <div class="mdc-select__bottom-line"></div>
+      <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel active" id="panel-4" role="tabpanel">
+        <div class="mdc-layout-grid__inner">
+          <div class="mdc-card mdc-layout-grid__cell--span-12">
+            <h1 class="mdc-typography--headline">Course Offered</h1>
+            <div class="mdc-layout-grid__inner">
+              <div id="alchemy-course-offered__class" class="mdc-select mdc-layout-grid__cell--span-4"
+                   role="listbox">
+                <div class="mdc-select__surface" tabindex="0">
+                  <div class="mdc-select__label"></div>
+                  <div class="mdc-select__selected-text"></div>
+                  <div class="mdc-select__bottom-line"></div>
+                </div>
+                <div class="mdc-menu mdc-select__menu">
+                  <ul class="mdc-list mdc-menu__items">
+                  </ul>
+                </div>
               </div>
-              <div class="mdc-menu mdc-select__menu">
-                <ul class="mdc-list mdc-menu__items">
-                </ul>
-              </div>
+              <button id="alchemy-course-offered__view-button"
+                      class="mdc-button mdc-button--raised mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--align-middle">
+                View Courses
+              </button>
             </div>
-            <button id="alchemy-course-offered__view-button"
-                    class="mdc-button mdc-button--raised mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--align-middle">
-              View Courses
-            </button>
           </div>
         </div>
-      </div>
-      <div class="mdc-layout-grid__inner">
-        <div class="mdc-card mdc-layout-grid__cell--span-4">
-        <ul class="mdc-list mdc-list--two-line">
-          <li class="mdc-list-item">
+        <div class="mdc-layout-grid__inner">
+          <div class="mdc-card mdc-layout-grid__cell--span-4">
+            <ul class="mdc-list mdc-list--two-line">
+              <li class="mdc-list-item">
                 <span class="mdc-list-item__text">
                   Two-line item
                   <span class="mdc-list-item__secondary-text">Secondary text</span>
                 </span>
-            <span class="mdc-list-item__meta">$10.00</span>
-          </li>
-          <li class="mdc-list-item">
+                <span class="mdc-list-item__meta">$10.00</span>
+              </li>
+              <li class="mdc-list-item">
                 <span class="mdc-list-item__text">
                   Two-line item
                   <span class="mdc-list-item__secondary-text">Secondary text</span>
                 </span>
-            <span class="mdc-list-item__meta">$20.00</span>
-          </li>
-          <li class="mdc-list-item">
+                <span class="mdc-list-item__meta">$20.00</span>
+              </li>
+              <li class="mdc-list-item">
                 <span class="mdc-list-item__text">
                   Two-line item
                   <span class="mdc-list-item__secondary-text">Secondary text</span>
                 </span>
-            <span class="mdc-list-item__meta">$30.00</span>
-          </li>
-        </ul>
-      </div>
-        <div class="mdc-card mdc-layout-grid__cell--span-8">
+                <span class="mdc-list-item__meta">$30.00</span>
+              </li>
+            </ul>
+          </div>
+          <div class="mdc-card mdc-layout-grid__cell--span-8">
 
+          </div>
         </div>
-      </div>
+      </section>
     </section>
-
   </main>
   <div class="mdc-layout-grid mdc-theme--primary-dark-bg mdc-theme--text-disabled-on-dark">
     <div class="mdc-layout-grid__inner">
